working GET on transactions and accounts
